# openmp_examples

./: .gitignore  CMakeLists.txt  README.MD  input_creator.cpp  main.cpp
